frame/support/test/tests/pallet_ui/genesis_default_not_satisfied.stderr
error[E0277]: the trait bound `pallet::GenesisConfig: std::default::Default` is not satisfied
  --> tests/pallet_ui/genesis_default_not_satisfied.rs:22:30
   |
22 |     impl BuildGenesisConfig for GenesisConfig {}
   |                                 ^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `pallet::GenesisConfig`
   |
note: required by a bound in `BuildGenesisConfig`
  --> $WORKSPACE/frame/support/src/traits/hooks.rs
   |
   | pub trait BuildGenesisConfig: Default + sp_runtime::traits::MaybeSerializeDeserialize {
   |                               ^^^^^^^ required by this bound in `BuildGenesisConfig`
help: consider annotating `pallet::GenesisConfig` with `#[derive(Default)]`
    |
19  +     #[derive(Default)]
20  |     pub struct GenesisConfig;
    |
